==2.0.1==
* Fixed display of links on class spell listing page
* Optimized Spell Listing code to speed up returns
    * Spell listing will no longer link to items being summoned, but the spell details for that spell still will.

==2.0==
DEPLOYED: 5/2/2025
* A massive site upgrade has been completed, adding many more features to allow EQDB to be a fully supported THJ database
search site instead of focusing just on gear.
* Search has been added for the following things found in the game:
	* Items
	* Spells
	* Zones
	* NPCs
	* Tradeskills
	* Factions
* Details pages have been added for the following things found in the game:
	* Items
	* Spells
	* Zones
	* NPCs
	* Tradeskills
	* Factions
	* Pets
* Listings have been added for the following things found in the game:
	* Zones By Expansion
	* Spells By Class
	* Pets By Class
* All links have been changed to reference internal EQDB features instead of outside sources.
* Spell Tooltips have been added.
	* The SPA parser is still a bit wonky, let Convection know if you find issues!
* Gear Search for both armor and weapons have been moved into the Tools section drop down
* Navbar Icon and front page image have been kindly provided by the CS team of The Heroes Journey EMU
* Thanks to Brewall for the maps and Akkadius for the spell and item Icons!
* Special thanks to Arzo, Flxff, Valorfel, Drake, Ammordius, and the Dev and CS Teams of The Heroes Journey EMU for their testing assistance!

--For Beta Users, Changes on Update to 2.0--
* Spells are no longer listed twice on all search results
* Items with vendor sources now show the zone the vendor is in
* Items with vendor sources no longer show out-of-era vendors
* Items shown on spell details page now show their icon
* Items shown on spell details page now have item tooltips